# geant4_vmc

./: CMakeLists.txt  README.md
cmake/: FindMC.cmake  UseMC.cmake
examples/: CMakeLists.txt  run_suite.sh  test_suite.sh
examples/ConcurrentEngines/: CMakeLists.txt  README.md  exampleCE.cxx  load_g3.C  load_g4.C
examples/ConcurrentEngines/include/: CEMCApplication.h  CEMCConcurrentApplication.h  CEMCMultiApplication.h  CEMCSingleApplication.h  CEMCStack.h  CEParticle.h  exampleCELinkDef.h
examples/ConcurrentEngines/src/: CEMCApplication.cxx  CEMCConcurrentApplication.cxx  CEMCMultiApplication.cxx  CEMCSingleApplication.cxx  CEMCStack.cxx  CEParticle.cxx
examples/E03/src/: Ex03DetectorConstruction.cxx  Ex03MCApplication.cxx
examples/EME/: .README.txt  CMakeLists.txt  README  exampleEME.cxx  g3tgeoConfig.C  g4ConfigEnv.C  g4tgeoConfig.C  g4tgeoConfig1.C  g4tgeoConfig2.C  load_g3.C  load_g4.C  read.C  run_g3.C  run_g4.C  set_vis.C  testEME.cxx  test_EME_multi.C  test_EME_multi_split.C  test_EME_single.C
examples/EME/geant4/: CMakeLists.txt
examples/EME/geant4/include/: ExMEPostDetConstruction.h  ExMERegionConstruction.h  ExMERunConfiguration1.h  ExMERunConfiguration2.h  ExMERunConfiguration3.h  ExMERunConfiguration4.h  geant4EMELinkDef.h
examples/EME/geant4/src/: ExMEPostDetConstruction.cxx  ExMERegionConstruction.cxx  ExMERunConfiguration1.cxx  ExMERunConfiguration2.cxx  ExMERunConfiguration3.cxx  ExMERunConfiguration4.cxx
examples/EME/include/: ExMECalorHit.h  ExMECalorimeterSD.h  ExMEDetectorConstruction.h  ExMEMCApplication.h  ExMEMCStack.h  ExMEPrimaryGenerator.h  exampleEMELinkDef.h
examples/EME/src/: ExMECalorHit.cxx  ExMECalorimeterSD.cxx  ExMEDetectorConstruction.cxx  ExMEMCApplication.cxx  ExMEMCStack.cxx  ExMEPrimaryGenerator.cxx  ExMEPrimaryGenerator.cxx.geantino
examples/MultipleEngines/: CMakeLists.txt  README.md  exampleME.cxx
examples/MultipleEngines/include/: MEMCMultiApplication.h  MEMCMultiStack.h  MEMCSingleApplication.h  MEMCSingleStack.h  MEParticle.h  exampleMELinkDef.h
examples/MultipleEngines/src/: MEMCMultiApplication.cxx  MEMCMultiStack.cxx  MEMCSingleApplication.cxx  MEMCSingleStack.cxx  MEParticle.cxx
g4root/include/: TG4RootNavMgr.h  TG4RootNavigator.h
g4root/src/: TG4RootNavMgr.cxx  TG4RootNavigator.cxx
source/digits+hits/include/: TG4StepManager.h
source/digits+hits/src/: TG4SensitiveDetector.cxx  TG4StepManager.cxx
source/event/include/: TG4EventAction.h  TG4TrackManager.h  TG4TrackingAction.h
source/event/src/: TG4EventAction.cxx  TG4GeoTrackManager.cxx  TG4SteppingAction.cxx  TG4TrackManager.cxx  TG4TrackingAction.cxx
source/geometry/include/: TG4GeometryManager.h
source/geometry/src/: TG4GeometryManager.cxx
source/physics/include/: TG4StackPopper.h  TG4TrackInformation.h  TG4TrackInformation.icc
source/physics/src/: TG4StackPopper.cxx  TG4TrackInformation.cxx
source/run/include/: TG4PrimaryGeneratorAction.h  TG4RunConfiguration.h  TG4RunManager.h  TGeant4.h  TGeant4.icc
source/run/src/: TG4PrimaryGeneratorAction.cxx  TG4RunConfiguration.cxx  TG4RunManager.cxx  TGeant4.cxx
